# utilities-geospatial-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy.sh  docker-compose.yml  test.sh
.github/workflows/: ci.yml  deploy.yml  pr-checks.yml
backend/: Dockerfile  pyproject.toml
backend/app/: features.py  main.py  models.py
backend/app/api/: __init__.py  graph.py  stats.py
backend/app/db/: __init__.py
backend/app/schemas/: __init__.py
backend/tests/: test_api.py  test_database.py  test_features.py  test_graph.py  test_health.py  test_risk.py  test_stats.py  test_synth.py
config/: features.json  rag-palette.json  synth-params.yaml
db/migrations/: 001_extensions.sql  002_property_types.sql  003_properties.sql  004_inspections.sql  005_mvt_functions.sql  006_seed_data.sql  007_pgrouting.sql  008_risk_scoring.sql  010_osm_schema.sql  011_synth_mvt.sql  012_criticality.sql
docs/: ARCHITECTURE.md  AUTH_PATTERNS.md  FEATURE_FLAGS.md  TRUNK_BASED_DEVELOPMENT.md
docs/adr/: 0001-mvt-server-martin.md  0002-deckgl-map-rendering.md  0003-docker-first-architecture.md  0004-idempotent-migrations.md  0005-e2e-testing-geospatial.md  0006-pgrouting-network-analysis.md  README.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/__tests__/: page.test.tsx
frontend/__tests__/components/: DraggablePanel.test.tsx  Legend.test.tsx  Map.test.tsx  (+2 more)
frontend/e2e/: home.spec.ts
martin/: config.yaml
nginx/: nginx.conf
scripts/: compute-criticality.py  generate-network.py  generate-network.sh  load-osm.py  load-osm.sh
(+19 files in other folders)
